# HO-Cap

./: .editorconfig  .gitignore  README.md  pyproject.toml
config/: .gitignore  hocap_benchmarks.json  hocap_benchmarks.yaml  hocap_hpe.json  hocap_info.yaml  hocap_odet.json  hocap_ope.json  hocap_recordings.json  hocap_recordings.yaml  mano_info.yaml
config/benchmarks/: benchmark_downloader.py
examples/: evaluate_hand_pose.py  evaluate_object_detection.py  evaluate_object_pose.py  image_label_viewer.py  sequence_3d_viewer.py  sequence_pose_viewer.py  sequence_renderer.py
hocap_toolkit/benchmarks/: groundtruth_generator.py
hocap_toolkit/factory/: __init__.py  dataset_factory.py
hocap_toolkit/layers/: __init__.py  mano_group_layer.py  mano_layer.py  object_group_layer.py  object_layer.py
hocap_toolkit/loaders/: __init__.py  sequence_loader.py
hocap_toolkit/renderers/: __init__.py  frame_renderer_pyrd.py  renderer_pyrd.py  sequence_renderer.py
hocap_toolkit/utils/: __init__.py  cv_utils.py  io.py  mano_info.py  misc.py  transforms.py
tools/: hocap_dataset_split.py  hocap_downloader.py
